@@ -1,0 +1,8 @@
+Copyright (c) 1999-2018 Igor Pavlov
+
+LZMA SDK is written and placed in the public domain by Igor Pavlov.
+
+Anyone is free to copy, modify, publish, use, compile, sell, or
+distribute the original LZMA SDK code, either in source code form or
+as a compiled binary, for any purpose, commercial or non-commercial,
+and by any means.
