@@ -214,6 +214,11 @@ static const char *const USAGE_BIG_POST_HASHMODES[] =
   "  3 | High        |  96 ms  | High              | Unresponsive",
   "  4 | Nightmare   | 480 ms  | Insane            | Headless",
   "",
+  "- [ License ] -",
+  "",
+  "  hashcat is licensed under the MIT license",
+  "  Copyright and license terms are listed in docs/license.txt",
+  "",
   "- [ Basic Examples ] -",
   "",
   "  Attack-          | Hash- |",
