@@ -34,6 +34,7 @@
 ## Technical
 ##
 
+- Documentation: Added 3rd party licenses to docs/license_libs
 - Module Structure: Add 3rd party library hook management functions. This also requires an update to all existing module_init()
 - Hash-Mode 13200 (AxCrypt): Changed the name to AxCrypt 1 to avoid confusion
 - Hash-Mode 13300 (AxCrypt in-memory SHA1): Changed the name to AxCrypt 1 in-memory SHA1
